[gd_scene load_steps=4 format=3 uid="uid://bohmnfj1ofkwb"]

[ext_resource type="Script" path="res://key_1.gd" id="1_abulq"]
[ext_resource type="Texture2D" uid="uid://mvkh8b6kvl5x" path="res://tilesets/tileset.png" id="2_p8egr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7273r"]
size = Vector2(24.0209, 20.4581)

[node name="Key1" type="StaticBody2D"]
script = ExtResource("1_abulq")

[node name="Chest_Key" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(0, 2)
rotation = 1.27758
texture = ExtResource("2_p8egr")
region_enabled = true
region_rect = Rect2(3.1049, 80.253, 10.5478, 11.1889)

[node name="Door_Key2" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
position = Vector2(0, 2)
rotation = 1.27758
texture = ExtResource("2_p8egr")
region_enabled = true
region_rect = Rect2(3.1049, 80.253, 10.5478, 11.1889)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 2)
rotation = 1.27758

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3.57727, 1.05357)
rotation = -1.27409
shape = SubResource("RectangleShape2D_7273r")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
